added the feature section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,40 @@
                 <h1 class="banr_head">Let's make <br>
                     beautiful flowers a <br>
                     part of your life.</h1>
-                <p class="banr_pra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ipsa dolorem. Quis, mollitia dolorem nobis optio doloribus molestiae odio hic iure voluptates ad consequuntur numquam reiciendis! Doloribus modi amet ullam id dicta nesciunt nemo culpa assumenda, totam alias, eum numquam placeat beatae at officiis atque, quam molestias quasi harum ratione?</p>
+                <p class="banr_pra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, ipsa dolorem. Quis,
+                    mollitia dolorem nobis optio doloribus molestiae odio hic iure voluptates ad consequuntur numquam
+                    reiciendis! Doloribus modi amet ullam id dicta nesciunt nemo culpa assumenda, totam alias, eum
+                    numquam placeat beatae at officiis atque, quam molestias quasi harum ratione?</p>
                 <button class="btn_shop">SHOP NOW</button>
             </div>
             <div class="banner_card"></div>
+        </div>
+    </section>
+
+    <!-- ----------Banner Section Design End-------- -->
+
+
+    <!-- --------Feature Section Design Start---------- -->
+
+    <section id="feature_secs">
+        <h1 class="feature_head">Our Featured Flowers</h1>
+        <p class="feature-pra">It is a long established fact that a reader will be distracted by the <br>
+            readable content of a page when looking at its layout.</p>
+        <div class="feature-container">
+            <div class="feature-card iteam1">
+                <div class="feature-card1"><img src="./images/freature2.png" class="flower-iteam1" alt="" srcset="">
+                </div>
+                <h1 class="feature-title">Lorem ipsum dolor sit amet.</h1>
+            </div>
+            <div class="feature-card iteam2">
+                <div class="feature-card2"><img src="./images/feature1.png" class="flower-iteam2" alt="" srcset=""></div>
+                <h1 class="feature-title">Lorem ipsum dolor sit amet.</h1>
+            </div>
+            <div class="feature-card iteam3">
+                <div class="feature-card3 iteam"><img src="./images/feature3.png" class="flower-iteam3" alt="" srcset="">
+                </div>
+                <h1 class="feature-title">Lorem ipsum dolor sit amet.</h1>
+            </div>
         </div>
     </section>
 </body>
